modify whole code